labs/multicontainer-kustomize/famous-kustomize/base/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: famousapp-mariadb
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: famousapp
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
      nodePort: null
  selector: 
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: famousapp
    app.kubernetes.io/component: primary
---
apiVersion: v1
kind: Service
metadata:
  name: famousapp-famouschart
  labels:
    app.kubernetes.io/name: famouschart
    app.kubernetes.io/instance: famousapp
    app.kubernetes.io/version: "1.16.0"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: famouschart
    app.kubernetes.io/instance: famousapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: famousapp-famouschart
  labels:
    app.kubernetes.io/name: famouschart
    app.kubernetes.io/instance: famousapp
    app.kubernetes.io/version: "1.16.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: famouschart
      app.kubernetes.io/instance: famousapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: famouschart
        app.kubernetes.io/instance: famousapp
    spec:
      securityContext:
        {}
      containers:
        - name: famouschart
          securityContext:
            {}
          image: "docker.io/yujinzhu/famous-quotes:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: famousapp-mariadb
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: famousapp
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  selector:
    matchLabels: 
      app.kubernetes.io/name: mariadb
      app.kubernetes.io/instance: famousapp
      app.kubernetes.io/component: primary
  serviceName: famousapp-mariadb
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configuration: 68ea57c9ab60373f05868ead8353923ea87bccb131675954c21b519bc410209e
      labels:
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/instance: famousapp
        app.kubernetes.io/component: primary
    spec:
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: mariadb
                    app.kubernetes.io/instance: famousapp
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      containers:
        - name: mariadb
          image: docker.io/bitnami/mariadb
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: mysql
              containerPort: 3306
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  if [[ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MARIADB_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  if [[ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MARIADB_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          resources: 
            limits: {}
            requests: {}
          volumeMounts:
            - name: data
              mountPath: /bitnami/mariadb
            - name: config
              mountPath: /opt/bitnami/mariadb/conf/my.cnf
              subPath: my.cnf
      volumes:
        - name: config
          configMap:
            name: famousapp-mariadb
  volumeClaimTemplates:
    - metadata:
        name: data
        labels: 
          app.kubernetes.io/name: mariadb
          app.kubernetes.io/instance: famousapp
          app.kubernetes.io/component: primary
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: famousapp
    app.kubernetes.io/name: famouschart
    app.kubernetes.io/version: 1.16.0
  name: famousapp-famouschart
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: famousapp-famouschart
    weight: 100
  wildcardPolicy: None
